# ad-safety

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
ad-safety-core/: Cargo.toml
ad-safety-core/src/: lib.rs
ad-safety-tests/: Cargo.toml
ad-safety-tests/src/: main.rs
ad-safety-tests/tests/: ui.rs
ad-safety-tests/tests/ui/: rule1_active_ref.rs  rule1_active_ref.stderr  rule2_coroutine.rs  rule2_coroutine.stderr  valid.rs
cargo-ad-safety/: Cargo.toml
cargo-ad-safety/src/: main.rs
